move options to seperate js file

--- a/options.html
+++ b/options.html
@@ -2,70 +2,7 @@
 	<head>
 		<title>My Test Extension Options</title>
 		<script type="text/javascript" src="jquery.js"></script>
-		<script type="text/javascript">
-
-			var iso639codes;
-			var xhr;
-
-			// Saves options to localStorage.
-			function save_options() {
-				localStorage["from"] = $("#from").val();
-				localStorage["to"] = $("#to").val();
-
-				// Update status to let user know options were saved.
-				var status = document.getElementById("status");
-				status.innerHTML = "Options Saved.";
-				setTimeout(function() {
-					status.innerHTML = "";
-				}, 750);
-			}
-
-			// Restores select box state to saved value from localStorage.
-			function restore_options() {
-				var from = localStorage["from"];
-				if (!from) {
-					return;
-				}
-				var select = document.getElementById("from");
-				for (var i = 0; i < select.children.length; i++) {
-					var child = select.children[i];
-					if (child.value == from) {
-						child.selected = "true";
-						break;
-					}
-				}
-
-				var to = localStorage["to"];
-				if (!to) {
-					return;
-				}
-				var select = document.getElementById("to");
-				for (var i = 0; i < select.children.length; i++) {
-					var child = select.children[i];
-					if (child.value == to) {
-						child.selected = "true";
-						break;
-					}
-				}
-			}
-		
-			function fillSelects(){
-				if (xhr.readyState == 4) {
-					// JSON.parse does not evaluate the attacker's scripts.
-					iso639codes = JSON.parse(xhr.responseText);
-					//console.log(resp);
-					iso639codes.forEach(function(val, i){
-						var option = $("<option value='"+ val.code +"'>"+ val.code + " - " + val.name +"</option>")
-						$("#from").append(option);
-						$("#to").append(option.clone());
-					});
-				}
-			}
-
-			xhr = new XMLHttpRequest();
-			xhr.open("GET", chrome.extension.getURL('/639.json'), false);
-			xhr.onreadystatechange = fillSelects;
-		</script>
+		<script type="text/javascript" src="options.js"></script>
 	</head>
 	<body>
 		Translation by shortcut (press "s" key after selecting text)<br/>
@@ -96,9 +33,5 @@
 		
 		<div id="status"></div>
 		
-		<script type="text/javascript">
-			xhr.send();
-			restore_options();
-		</script>
 	</body>
 </html>
