--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,7 @@
   <head>
   </head>
   <body>
-    <script>			
-		function onSelectedText(response){
-			document.getElementById('main').src = 
-				"http://m.seslisozluk.com/?word=" + encodeURIComponent(response.selected_text);
-		};
-		
-		chrome.tabs.getSelected(null, function(tab) {
-			chrome.tabs.sendRequest(tab.id, {action: "get_selected_text"}, onSelectedText);
-		});
-    </script>
-	<iframe id="main" frameborder="0" width="300" height="300" src="http://m.seslisozluk.com/"></iframe>
+	<iframe id="main" frameborder="0" width="300" height="300"></iframe>
+    <script src="popup.js"></script>
   </body>
 </html>
