fix options page title

--- a/options.html
+++ b/options.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<title>My Test Extension Options</title>
-		<script type="text/javascript" src="jquery.js"></script>
-		<script type="text/javascript" src="options.js"></script>
+		<title>SesliSozluk Options</title>
+		<script src="jquery.js"></script>
+		<script src="options.js"></script>
 	</head>
 	<body>
 		Translation by shortcut (press "s" key after selecting text)<br/>
