--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>SesliSozluk Options</title>
-		<script src="jquery.js"></script>
+		<script src="jquery-2.0.3.min.js"></script>
 		<script src="options.js"></script>
 	</head>
 	<body>
